1999-07-28  Miguel de Icaza  <miguel@gnu.org>

	* calendar-pilot-sync.c: Make the code not take arguments
	(sync_cal_to_pilot): Nice event update information

	* calendar.c (calendar_new): Add Event UID hash table.
	(calendar_add_object): Add events to the hash table here.
	(calendar_remove_object): Remove events here.
	(calendar_object_find_event): Use the hash table here.

	* main.c (save_calendar_cmd): The object is already destroyed by
	gnome_dialog_run. 

	* calendar-pilot-sync.c (sync_object_to_pilot): Do not turn
	archived bit on. 

	* calobj.c (ical_gen_uid): Use the hostname, not the domain name.
	(ical_gen_uid): Add a serial number.  Isodates can be small.

	* corba-cal.c (cal_repo_update_pilot_id): New method to update the
	pilot status.
	(cal_repo_get_updated_objects): New method.  Returns a list of
	modified and not-sycned objects

	* calendar-pilot-sync.c (sync_cal_to_pilot): New function to sync
	from the GnomeCalendar to the pilot.
	(sync_object_to_pilot): Sync a single event to the pilot.
	(try_alarm): Alarm syncing code.

1999-07-27  Miguel de Icaza  <miguel@gnu.org>

	* calendar-pilot-sync.c: New file.  Implements PalmPilot
	syncronization with the Gnome Calendar.
	
	* calobj.c (ical_object_new_from_string): New function.  Creates
	an iCalObject from a vCalendar string that is supposed to contain
	only one vEvent.

	* calendar.c:
	(calendar_save): Split this routine in two.

	* gnome-cal.c (gnome_calendar_new): Create the corba server here.

	* main.c: Include gnorba.h, and corba-cal-factory.h here
	(close_cmd): Kill the calendar server on shutdown.

	* calobj.c (load_recur_yearly_day): Added a fixme comment.  WE
	need to handle intervals in the years.

	* calendar.c (calendar_object_find_in_list, calendar_object_find,
	calendar_object_find_todo, calendar_object_find_event): New
	functions for looking up information.

	* main.c (gnome_calendar_locate): New function.

	* corba-cal.c (calendar_create_object): New file.  Implements the